[tool.poetry]
name = "maquisdoc-rapidexo"
version = "0.1.0"
description = ""
authors = ["Rémy <nicolair@maquisdoc.net>"]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.0"
Flask-Cors = "^3.0.10"
requests = "^2.26.0"
PyLaTeX = "^1.4.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
